隐藏在阅读器中显示的链接上的红框
不然会在提交图书馆时审核不通过

--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass{fudan}
 
+%% 隐藏在阅读器中显示的链接上的红框
+\hypersetup{hidelinks}
+
 \title{论文标题}
 \author{
 指导小组成员名单\vspace{1em}\\
